# chat_project

./: .gitignore  README.md
client/qt_client/: .qmlls.ini  CMakeLists.txt  ChatPage.qml  LoginPage.qml  Main.qml  RegisterPage.qml  ResetPage.qml  avataruploader.cpp  avataruploader.h  main.cpp  resource.qrc
server/qt_server/: CMakeLists.txt  chatserver.cpp  chatserver.h  main.cpp  smtpclient.cpp  sqlmanager.cpp  sqlmanager.h  verifyserver.cpp  verifyserver.h
server/qt_server/qt_verify_server/: CMakeLists.txt  main.cpp  registeruser.cpp  registeruser.h  smtpclient.h  verifyserver.cpp
